# serial_net

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  INSTALL.txt  README.md
doc/: Notes on serial ports.txt
src/: CMakeLists.txt
src/core/: AddressCache.cpp  AddressCache.h  ByteBuf.cpp  ByteBuf.h  CMakeLists.txt  ClientAddress.cpp  ClientAddress.h  Core.cpp  Core.h  FolderManager.cpp  FolderManager.h  FrameCodec.cpp  FrameCodec.h  MsgToByteAdapter.cpp  MsgToByteAdapter.h  OwnAddress.cpp  OwnAddress.h  PacketTypeCodec.cpp  PacketTypeCodec.h  SerialProtocol.h  TxQueue.cpp  TxQueue.h  WSDump.cpp  WSDump.h
src/drivers/: CMakeLists.txt
src/drivers/mqtt/: CMakeLists.txt  MQTTByteEther.cpp  MQTTByteEther.h  MQTTDriver.cpp  MQTTDriver.h  MQTTLogger.cpp  MQTTLogger.h  MQTTMsgEther.cpp  MQTTMsgEther.h
src/drivers/pty/: CMakeLists.txt  PtyRawHostDriver.cpp  PtyRawHostDriver.h
src/drivers/serial/: CMakeLists.txt  PosixSerialUtils.cpp  PosixSerialUtils.h  SerialByteEther.cpp  SerialByteEther.h
src/drivers/stdstream/: CMakeLists.txt  StdioRawHostDriver.cpp  StdioRawHostDriver.h  StdstreamPipeHostDriver.cpp  StdstreamPipeHostDriver.h
src/drivers/tap/: CMakeLists.txt  SocatTapHostDriver.cpp  SocatTapHostDriver.h  TapHostDriver.cpp  TapHostDriver.h  TapProtocol.cpp  TapProtocol.h  TunTapDriver.cpp  TunTapDriver.h
src/drivers/tun/: CMakeLists.txt  SocatTunHostDriver.cpp  SocatTunHostDriver.h  TunHostDriver.cpp  TunHostDriver.h  TunProtocol.cpp  TunProtocol.h
src/eventwrapper/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  IoWatcher.cpp  IoWatcher.h  SignalWatcher.cpp  SignalWatcher.h  TimeoutWatcher.cpp  TimeoutWatcher.h
src/factories/: CMakeLists.txt  RealPosixFactory.cpp  RealPosixFactory.h
src/hal/: CMakeLists.txt  PosixFd.cpp  PosixFd.h  PosixFileFake.cpp  PosixFileFake.h  PosixFileReal.cpp  PosixFileReal.h  PosixIf.cpp  PosixIf.h  PosixSerialReal.cpp  PosixSerialReal.h  PosixSleepReal.cpp  PosixSleepReal.h  PosixTunTapReal.cpp  PosixTunTapReal.h  SerialHalReal.cpp  SerialHalReal.h  TimeServiceEv.cpp  TimeServiceEv.h  TimeServiceSim.cpp  TimeServiceSim.h
src/interfaces/: ByteEtherIf.cpp  ByteEtherIf.h  ByteStreamIf.h  CMakeLists.txt  FactoryIf.cpp  FactoryIf.h  MasterTxIf.cpp  MasterTxIf.h  MsgEtherIf.cpp  MsgEtherIf.h  MsgHostIf.cpp  MsgHostIf.h  RuntimeIf.cpp  RuntimeIf.h  SerialProtocol.h  TimeServiceIf.cpp  TimeServiceIf.h
src/mains/: CMakeLists.txt
src/mains/hw_tests/: CMakeLists.txt  HwTests.cpp  HwTests.h  hw_tests.cpp
src/mains/serialnet/: CMakeLists.txt  SNConfig.cpp  SNConfig.h  SerialNet.cpp  SerialNet.h  help.cpp  help.h  main.cpp
src/mains/test_tun/: a.out  main.cpp
src/master/: Action.cpp  Action.h  ActionHandler.cpp  ActionHandler.h  AddressLine.cpp  AddressLine.h  Addresses.cpp  Addresses.h  CMakeLists.txt  DynamicAddress.cpp  DynamicAddress.h  DynamicHandler.cpp  DynamicHandler.h  Event.cpp  Event.h  Master.cpp  Master.h  MasterFSM.cpp  MasterFSM.h  MasterPacketTx.cpp  MasterPacketTx.h  MasterScheduler.cpp  MasterScheduler.h  MasterUtils.cpp  MasterUtils.h
src/statechart/: CMakeLists.txt  StateChart.cpp  StateChart.h
src/utility/: CMakeLists.txt  Config.cpp  Config.h  Log.cpp  Log.h  ProgramVersion.cpp  ProgramVersion.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  VecQueue.cpp  VecQueue.h
tools/: get_git_version.sh  run_socat_tap.sh  run_tap_client.sh  run_tap_master.sh  setup_dependencies.sh
utest/: CMakeLists.txt
utest/core/: CMakeLists.txt  ClientAddress_test.cpp  OwnAddress_test.cpp  SerialProtocal_test.cpp
utest/drivers/: CMakeLists.txt
utest/drivers/pty/: CMakeLists.txt  pty_test.cpp
utest/drivers/serial/: CMakeLists.txt  PosixSerialUtils_test.cpp
utest/eventwrapper/: CMakeLists.txt  eventWrapper_test.cpp
utest/frametest/: ByteEther.cpp  ByteEther.h  CMakeLists.txt  frametest.cpp
utest/hal/: CMakeLists.txt  PosixFd_test.cpp  PosixFileReal_test.cpp  TimeServiceEv_test.cpp
utest/master/: CMakeLists.txt  masterfsm.cpp
utest/serialtest/: CMakeLists.txt  serialtest.cpp
utest/statechart/: CMakeLists.txt  fsm_test.cpp
